// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx transform > should work with CSS Variables transform to inline style 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div style=\\"--color: red;\\">Hello, World!");
const element = _h$(_tmpl$, {});"
`;

exports[`jsx transform > should work with bind api 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div><p>Paragraph 1</p><p>Paragraph 2</p>");
const value = 1;
_h$(_tmpl$, {
  "2": {
    "value": value,
    "updateValue": _value => value = _value
  }
});"
`;

exports[`jsx transform > should work with comment in JSX 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div><p>Paragraph 1</p><p>Paragraph 2</p>");
const value = 1;
_h$(_tmpl$, {
  "3": {
    "value": value,
    "updateValue": _value => value = _value
  }
});"
`;

exports[`jsx transform > should work with dynamic style transform to inline style 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div>Hello, World!");
const color = "red";
const style = {
  color,
  fontSize: '16px'
};
const element = _h$(_tmpl$, {
  "1": {
    "style": style
  }
});"
`;

exports[`jsx transform > should work with static style transform to inline style 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div style=\\"color:red;fontSize:16px;\\">Hello, World!");
const element = _h$(_tmpl$, {});"
`;

exports[`jsx transform > transforms JSX element with JSX fragment 1`] = `
"import { template as _template$, Fragment as _fragment$ } from "aube";
const _tmpl$ = "<p>Paragraph 1</p><p>Paragraph 2</p>";
const element = _fragment$(_tmpl$, {});"
`;

exports[`jsx transform > transforms JSX element with JSX fragment as children 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div><p>Paragraph 1</p><p>Paragraph 2</p>");
const element = _h$(_tmpl$, {});"
`;

exports[`jsx transform > transforms JSX element with SVG tags 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<svg><circle cx=\\"50\\" cy=\\"50\\" r=\\"40\\" stroke=\\"black\\" stroke-width=\\"3\\" fill=\\"red\\">");
const element = _h$(_tmpl$, {});"
`;

exports[`jsx transform > transforms JSX element with attributes 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div id=\\"myId\\" class=\\"myClass\\">Hello, World!");
const element = _h$(_tmpl$, {});"
`;

exports[`jsx transform > transforms JSX element with boolean attribute 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<input disabled/>");
const element = _h$(_tmpl$, {});"
`;

exports[`jsx transform > transforms JSX element with children 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div><p>Paragraph 1</p><p>Paragraph 2</p>");
const element = _h$(_tmpl$, {});"
`;

exports[`jsx transform > transforms JSX element with class and style attributes 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div>Hello, World!");
const hasClass = true;
const style = {
  color: 'red',
  fontSize: '16px'
};
const element = _h$(_tmpl$, {
  "1": {
    "class": () => hasClass ? 'myClass' : '',
    "style": style
  }
});"
`;

exports[`jsx transform > transforms JSX element with conditional attributes 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div>Hello, World!");
const hasClass = true;
const element = _h$(_tmpl$, {
  "1": {
    "class": () => hasClass ? 'myClass' : 'otherClass'
  }
});"
`;

exports[`jsx transform > transforms JSX element with dynamic expressions 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div>Hello,<!>!");
const name = 'John';
const element = _h$(_tmpl$, {
  "1": {
    "children": [[() => name, 3]]
  }
});"
`;

exports[`jsx transform > transforms JSX element with function components 1`] = `
"import { h as _h$, template as _template$ } from "aube";
const _tmpl$ = _template$("<div><!>");
const element = _h$(_tmpl$, {
  "1": {
    "children": [[() => _h$(MyComponent, {
      "text": "Component 1"
    }), 2], [() => _h$(MyComponent, {
      "text": "Component 2"
    }), null]]
  }
});"
`;

exports[`jsx transform > transforms JSX element with nested expressions and children 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div><p><!>'s Profile</p><ul></ul>"),
  _tmpl$2 = _template$("<li>Item");
const name = 'John';
const element = _h$(_tmpl$, {
  "2": {
    "children": [[() => name, 3]]
  },
  "5": {
    "children": [[() => Array.from({
      length: 3
    }, (_, i) => _h$(_tmpl$2, {
      "1": {
        "children": [[() => i + 1, null]]
      }
    }, i)), null]]
  }
});"
`;

exports[`jsx transform > transforms JSX element with null and undefined attributes 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div>Hello, World!");
const element = _h$(_tmpl$, {
  "1": {
    "id": null,
    "class": undefined
  }
});"
`;

exports[`jsx transform > transforms JSX element with null and undefined children 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div><!><p>Paragraph 1</p><!><!><p>Paragraph 2</p>");
const element = _h$(_tmpl$, {
  "1": {
    "children": [[() => null, 2], [() => undefined, 5], [() => false, 6]]
  }
});"
`;

exports[`jsx transform > transforms JSX element with null and undefined in expressions 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div><p><!>'s Profile</p><!><p>Paragraph 2</p>");
const name = null;
const element = _h$(_tmpl$, {
  "1": {
    "children": [[() => undefined, 5]]
  },
  "2": {
    "children": [[() => name, 3]]
  }
});"
`;

exports[`jsx transform > transforms JSX element with self-closing tags 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div><img src=\\"image.jpg\\" alt=\\"Image 1\\"/><img src=\\"image.jpg\\" alt=\\"Image 2\\"/>");
const element = _h$(_tmpl$, {});"
`;

exports[`jsx transform > transforms JSX element with spread attributes 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div>Hello, World!");
const props = {
  id: 'myId',
  class: 'myClass'
};
const element = _h$(_tmpl$, {
  "1": {
    ...props
  }
});"
`;

exports[`jsx transform > transforms JSX element with style attribute 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div>Hello, World!");
const style = {
  color: 'red',
  fontSize: '16px'
};
const element = _h$(_tmpl$, {
  "1": {
    "style": style
  }
});"
`;

exports[`jsx transform > transforms simple JSX element 1`] = `
"import { template as _template$, h as _h$ } from "aube";
const _tmpl$ = _template$("<div>Hello, World!");
const element = _h$(_tmpl$, {});"
`;
